--- a/componentes/menu.html
+++ b/componentes/menu.html
@@ -1,6 +1,6 @@
 <nav id="navBTC1" style="color: #202538 !important; background-color: none;"
 class=" container navbar navbar-expand-lg ">
-<a class="navbar-brand" style="color: #202538 !important;" href="../index.html"><b>UEFSJE</b></a>
+<a class="navbar-brand" style="color: #202538 !important;" href="Proyecto-San-Juan/index.html"><b>UEFSJE</b></a>
 <button style="color: #202538 !important;" class="navbar-toggler" type="button" data-toggle="collapse"
     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
     aria-label="Toggle navigation">
@@ -14,11 +14,11 @@ class=" container navbar navbar-expand-lg ">
                 El colegio
             </a>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="../index.html#mision_vision">Misión y visión</a>
-                <a class="dropdown-item" href="../index.html#OfertaAcademica">Oferta academica</a>
-                <a class="dropdown-item" href="../index.html#areaAdministrativa">Área administrativa</a>
-                <a class="dropdown-item" href="../index.html#historia">Reseña história</a>
-                <a class="dropdown-item" href="../index.html#simbolos">Símbolos de la institusión</a>
+                <a class="dropdown-item" href="Proyecto-San-Juan/index.html#mision_vision">Misión y visión</a>
+                <a class="dropdown-item" href="Proyecto-San-Juan/index.html#OfertaAcademica">Oferta academica</a>
+                <a class="dropdown-item" href="Proyecto-San-Juan/index.html#areaAdministrativa">Área administrativa</a>
+                <a class="dropdown-item" href="Proyecto-San-Juan/index.html#historia">Reseña história</a>
+                <a class="dropdown-item" href="Proyecto-San-Juan/index.html#simbolos">Símbolos de la institusión</a>
             </div>
         </li>
         <li class="nav-item dropdown">
@@ -27,8 +27,8 @@ class=" container navbar navbar-expand-lg ">
                 Docentes
             </a>
             <div style="color: #202538 !important;" class="dropdown-menu">
-                <a class="dropdown-item" href="../docente_información.html">Información</a>
-                <a class="dropdown-item" href="../recursos_docente.html">Recurso docentes</a>
+                <a class="dropdown-item" href="Proyecto-San-Juan/docente_información.html">Información</a>
+                <a class="dropdown-item" href="Proyecto-San-Juan/recursos_docente.html">Recurso docentes</a>
                 <a class="dropdown-item" href="#">Metodología docentes</a>
             </div>
         </li>
