--- a/bienestar_institucional.html
+++ b/bienestar_institucional.html
@@ -51,22 +51,22 @@
                <div class="row oculto_celular">
                     <div class="col-lg-6 col-sm-12 p-1" >
                         <div class="div" style="height: 350px; background: #0B152E;">
-                        <img src="https://scontent.fltx2-1.fna.fbcdn.net/v/t39.30808-6/357073403_137357329377594_5426676765048241371_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeHrH-7lNTWtwrxem6Ue1nmQh-NRqh-b8SCH41GqH5vxIDeDvQFcsClFonQ_dRFlZXOgqcf-v0lrtrd2FkK-ICkb&_nc_ohc=Uenl2ZDl9XMAX-fQPY-&_nc_ht=scontent.fltx2-1.fna&oh=00_AfAXfGBw1nVR5vZ9L8NgfSU_u-UThkWg82p78UrKqmK6bg&oe=64E566F2"
+                        <img src="img/Docentes/1f.jpg"
                         style="width: 100%; height: 100%; object-fit: cover; border: 10px solid #0B152E;"></div>
                     </div>
                     <div class="col-lg-6 col-sm-6  p-1" >
                         <div class="div" style="height: 350px; background: #0B152E;">
-                        <img src="https://scontent.fltx2-1.fna.fbcdn.net/v/t39.30808-6/354465973_127820113664649_1819801869054027201_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeGAYIs-2FXF4q_NCCmO9vX4EzHLP9urynQTMcs_26vKdBearsJDyJUdF1QKHfSGtqWkAitjGTHe_qfHzxKj0Tvh&_nc_ohc=iS7QC0uiZH0AX8j6Oy_&_nc_ht=scontent.fltx2-1.fna&oh=00_AfDX6PRWkpA3JX9t3UcG12ih_Hw5JJYTnx5moPDvMBZR3Q&oe=64E64AF1"
+                        <img src="img/Docentes/2.jpg"
                          style="width: 100%; height: 100%; object-fit: cover;border: 10px solid #0B152E;"></div>
                     </div>
                     <div class="col-lg-6 col-sm-6  p-1" >
                         <div class="div" style="height: 250px; background: #0B152E;">
-                        <img src="https://scontent.fltx2-1.fna.fbcdn.net/v/t39.30808-6/347244125_137357899377537_5557960803572142294_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeE06lBY5uAk682cpYXIy1UUyzwxSryRQBvLPDFKvJFAGw1VfdfzkAW6HYtX_RqG48R7Ep_N_YkyLbuS9vLyeFAp&_nc_ohc=8KRuiD3rHqIAX9fOP-c&_nc_ht=scontent.fltx2-1.fna&oh=00_AfBuNcMZdMVNvMxOaCIemg-ZG0i41f36BMkG2nv8O1Uc-g&oe=64E52D8D"
+                        <img src="img/Docentes/3.jpg"
                          style="width: 100%; height: 100%; object-fit: cover; border: 10px solid #0B152E;"></div>
                     </div>
                     <div class="col-lg-6 col-sm-6  p-1" >
                         <div class="div" style="height: 250px; background: #0B152E;">
-                        <img src="https://scontent.fltx2-1.fna.fbcdn.net/v/t39.30808-6/348465952_150057511440909_4781586770433919495_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=8bfeb9&_nc_eui2=AeHahoxUu2hKSqLNCy1r_5pZv5H0Z3b3M_O_kfRndvcz88DtYEU_anU2A2XmMGq2TuD3PJ-2rJU8Gzh2ltITSCIM&_nc_ohc=sGFmVvIssBYAX9joBxc&_nc_ht=scontent.fltx2-1.fna&oh=00_AfD7MFwC6aw-qCCJmz8r5CzC1w1QopuawvUCS5zp5vAuIQ&oe=64E5EBB4" 
+                        <img src="img/Docentes/4.jpg" 
                         style="width: 100%; height: 100%; object-fit: cover; border: 10px solid #0B152E;"></div>
                     </div>
         
