--- a/recursos_docente.html
+++ b/recursos_docente.html
@@ -199,7 +199,7 @@
                     <div class="row cajon gradiente1 col-lg-5 m-1 p-0" style="  color: #ffffff;">
                         <div class="col-lg-5 p-0">
                             <img style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px 0px 0px 10px;"
-                                src="img/recurso_docente/_291cf11e-5e44-49cf-b443-4e52e6e3c803.jpg">
+                                src="img/recurso_docente/libros.jpg">
                         </div>
                         <div class="col-lg-7 m-0 p-2 pl-4">
                             <h3 class="">Planificaciones</h3>
@@ -252,7 +252,7 @@
                     <div class="row cajon gradiente2 col-lg-5 m-1 p-0" style="  color: #ffffff;">
                         <div class="col-lg-5 p-0">
                             <img style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px 0px 0px 10px;"
-                                src="img/recurso_docente/_acf13449-08eb-4ba8-b2ec-63c7f1fc006f.jpg">
+                                src="img/recurso_docente/ninios.jpg">
                         </div>
                         <div class="col-lg-7 m-0 p-2 pl-4">
                             <h3 class="">Material y cursos</h3>
@@ -303,7 +303,7 @@
                     <div class="col-lg-3 m-3 p-0 btn_animacion"
                         style="border-radius: 20px; height: 550px; background: #4d5e86;">
                         <img style="width: 100%; border-radius: 10px 10px 0px 0px;"
-                            src="img/recurso_docente/_402b9554-b243-4927-924d-afc1adc726d9.jpg">
+                            src="img/recurso_docente/espacioLibros.jpg">
                         <div class="p-2" style="color: #fff;">
                             <h3>Cursos para el aprendizaje</h3>
                             <p>Contido de las materias de las especialidad bachillerato ciencias</p>
@@ -322,10 +322,10 @@
                     <div class="col-lg-3 m-3 p-0 btn_animacion"
                         style="border-radius: 20px; height: 550px; background: #3e4b60;">
                         <img style="width: 100%; border-radius: 10px 10px 0px 0px;"
-                            src="img/recurso_docente/_bc9bdfe2-8f66-43c4-b3ac-5e049c2fde22.jpg">
+                            src="img/recurso_docente/tecnicoInformatica.jpg">
                         <div class="p-2" style="color: #fff;">
-                            <h3>Planificaciones bachillerato ciencias</h3>
-                            <p>Contido de las materias de las especialidad bachillerato ciencias</p>
+                            <h3>Planificaciones bachillerato técnico</h3>
+                            <p>Contido de las materias de las especialidad bachillerato técnico</p>
                         </div>
                         <a class=" btn btnpersonal " href="#">
                             Ir al contenido <i class="bi bi-arrow-right"></i></a>
@@ -333,10 +333,10 @@
                     <div class="col-lg-3 m-3 p-0 btn_animacion"
                         style="border-radius: 20px; height: 550px; background: rgb(141, 115, 152);">
                         <img style="width: 100%; border-radius: 10px 10px 0px 0px;"
-                            src="img/recurso_docente/_334da7f9-0602-4fbe-b426-1134f29a19c8.jpg">
+                            src="img/recurso_docente/act.jpg">
                         <div class="p-2" style="color: #fff;">
                             <h3>Actividades y materiales de apoyo</h3>
-                            <p>Contido de las materias de las especialidad bachillerato ciencias</p>
+                            <p>Contido de las materias de las especialidad bachillerato técnico</p>
                         </div>
                         <a class=" btn btnpersonal " href="#">
                             Ir al contenido <i class="bi bi-arrow-right"></i></a>
@@ -344,10 +344,10 @@
                     <div class="col-lg-3 m-3 p-0 btn_animacion"
                         style="border-radius: 20px; height: 550px; background: #3a3c3f;">
                         <img style="width: 100%; border-radius: 10px 10px 0px 0px;"
-                            src="img/recurso_docente/_78082e3e-5184-4797-b15f-c7fffd071667.jpg">
+                            src="img/recurso_docente/audi.jpg">
                         <div class="p-2" style="color: #fff;">
                             <h3>Cursos para el aprendizaje</h3>
-                            <p>Contido de las materias de las especialidad bachillerato ciencias</p>
+                            <p>Contido de las materias de las especialidad bachillerato técnico</p>
                         </div>
                         <a class=" btn btnpersonal " href="#">
                             Ir al contenido <i class="bi bi-arrow-right"></i></a>
