--- a/bienestar_institucional.html
+++ b/bienestar_institucional.html
@@ -275,7 +275,7 @@
                                      <img class="imdd" style="width: 200px" src="img/Uniforme/OIG%20(2).png">
                         </div>
                         <div class="col-lg-12"> 
-                                    <img class="imdd"  style="width: 150px;" src="img/Uniforme/_35aa6d9d-c021-4cbc-a643-13fe0893a05e.png">
+                                    <img class="imdd"  style="width: 150px;" src="img/Uniforme/aaa.png">
                                  </div>  
                                  <div class="col-lg-12">
                                      <img class="imdd mt-3" style="width: 150px" src="img/Uniforme/zapatosHombres.png">
