--- a/recursos_docente.html
+++ b/recursos_docente.html
@@ -280,7 +280,7 @@
                     BACHILLERATO CIENCIAS
                 </div>
                 <div class="row d-flex justify-content-center align-items-center">
-                    <div class="col-lg-3 m-2 p-0 btn_animacion card_bachi"
+                    <div class="col-lg-3 m-2 p-0 btn_animacion "
                         style="border-radius: 20px;  background: #424740;">
                         <img style="width: 100%; border-radius: 10px 10px 0px 0px;" src="img/recurso_docente/OIG.jpg">
                         <div class="p-2" style="color: #fff; min-height:250px;">
@@ -291,7 +291,7 @@
                         </div>
                         
                     </div>
-                    <div class="col-lg-3 m-3 p-0 btn_animacion card_bachi"
+                    <div class="col-lg-3 m-3 p-0 btn_animacion "
                         style="border-radius: 20px; background: #578ba5;">
                         <img style="width: 100%; border-radius: 10px 10px 0px 0px;"
                             src="img/recurso_docente/OIG.EcY8wzRWX.jpg">
@@ -303,7 +303,7 @@
                         </div>
                         
                     </div>
-                    <div class="col-lg-3 m-3 p-0 btn_animacion card_bachi"
+                    <div class="col-lg-3 m-3 p-0 btn_animacion "
                         style="border-radius: 20px;  background: #4d5e86;">
                         <img style="width: 100%; border-radius: 10px 10px 0px 0px;"
                             src="img/recurso_docente/espacioLibros.jpg">
@@ -367,12 +367,12 @@
     <div class="container-fluid mt-5 ">
         <div class="row">
 
-            <div class="col-lg-12 p-5 d-block "
+            <div class="col-lg-12 p-5 d-block portada"
                 style="background: #202538; height:  500px; background-image: url(img/SegundaHerader.png); background-repeat: repeat; background-size: cover;">
                 <h2 style="color:#fff; font-family: 'Bebas Neue', sans-serif;font-size: 75px;">
                     SAN JUAN EVANGELISTA</h2>
                 <!-- <h3 style="color:#fff" class="mb-5">Generando estudiantes de calidad desde 1988!!</h3> -->
-                <p style="color: #fff; font-style: italic; font-size: 22px; width: 650px;" class="mt-5">
+                <p style="color: #fff; font-style: italic; font-size: 22px; " class="mt-5">
                     "Nunca subestimes el poder del conocimiento; cada día de estudio es una oportunidad para crecer,
                     aprender y acercarte a tus sueños. ¡Persiste y alcanzarás lo que te propongas!"</p>
 
