--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     }
 </style>
 
-<body style="overflow-x: hidden; max-width: 100vw; ">
+<body >
 
     <div id="menu-container"></div>
 
@@ -115,9 +115,10 @@
                 </div>
                 
             </div>
-            <div class="row d-flex justify-content-center align-items-center">
+            <div class="row m-0 d-flex justify-content-center
+                        ">
                 <div class="col-lg-4 p-0 m-0">
-                    <div class="card bg-dark text-white expandi" style="min-height: auto;  border-radius: 0px;">
+                    <div class="card bg-dark text-white expandi" style="min-height: auto; width: 100%; border-radius: 0px;">
                         <img src="img/3.png" style="border-radius: 0px; width:100% " class="card-img simg"
                             alt="...">
                         <div class="card-img-overlay p-4 pl-5 efect">
@@ -131,7 +132,7 @@
 
                 </div>
                 <div class="col-lg-4  p-0">
-                    <div class="card bg-dark text-white expandi" style="min-height: auto; border-radius: 0px;">
+                    <div class="card bg-dark text-white expandi" style="min-height: auto; width: 100%; border-radius: 0px;">
                         <img src="img/1.png" style="border-radius: 0px; width:100% " class="card-img " alt="...">
                         <div class="card-img-overlay  p-4 pl-5">
                             <h5 class="card-title">BACHILLERATO EN CIENCIAS</h5>
@@ -143,8 +144,8 @@
                     </div>
 
                 </div>
-                <div class="col-lg-4 p-0">
-                    <div class="card bg-dark text-white expandi" style="min-height: auto;border-radius: 0px;">
+                <div class="col-lg-4 p-0 m-0">
+                    <div class="card bg-dark text-white expandi" style="min-height: auto;border-radius: 0px;width: 100%;">
                         <img src="img/2.png" class="card-img " style="border-radius: 0px; width:100% " alt="...">
                         <div class="card-img-overlay  p-4 pl-5">
                             <h5 class="card-title">BACHILLERATO EN TÉCNICO</h5>
@@ -209,7 +210,7 @@
     </style>
     <div id="areaAdministrativa" class="container-fluid ">
         <div class="row ">
-            <div class="col-lg-12 p-0">
+            <div class="col-lg-12 m-0 p-0">
                 <img style="position:absolute;width: 100%; height: 100%; object-fit: cover; opacity: 0.05; "
                     src="img/mmmotif.svg">
                 <div class="p-5"
@@ -217,9 +218,9 @@
                     ÁREA ADMINISTRATIVA
                 </div>
             </div>
-            <div style="background: #0B152E;" class="row d-flex justify-content-center">
+            <div style="background: #0B152E;" class="row m-0 d-flex justify-content-center">
                 <div class="col-lg-4 p-0">
-                    <div class="card p-3 text-center" style="width: auto; height: auto;  border: none;">
+                    <div class="card p-3 m-0 text-center" style="width: auto; height: auto;  border: none;">
                         <div class="card-body ">
                             <img class="m-2" style="width: 170px; height: 175px; border-radius: 50%; object-fit: cover;"
                                 src="img/Docentes/rectora_Lopez.png">
@@ -288,7 +289,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 p-0">
-                    <div class="card p-3 text-center" style="width: auto; height: auto;  border: none;">
+                    <div class="card p-3 text-center" style="width: auto; height: auto;  border: none; border-radius: 0px">
                         <div class="card-body ">
                             <img class="m-2" style="width: 170px; height: 175px; border-radius: 50%; object-fit: cover;"
                                 src="img/Docentes/Laura.png">
@@ -304,7 +305,7 @@
                     </div>
                 </div>
                 <div class="col-lg-4 p-0">
-                    <div class="card p-3 text-center" style="width: auto; height: auto;  border: none;">
+                    <div class="card p-3 text-center" style="width: auto; height: auto;  border: none;border-radius: 0px">
                         <div class="card-body ">
                             <img class="m-2" style="width: 170px; height: 175px; border-radius: 50%; object-fit: cover;"
                                 src="img/Docentes/Johanna%20Baque.png">
@@ -327,21 +328,21 @@
     </div>
     <div id="historia" class="container-fluid mt-5 m-0 p-0">
 
-        <div class="row p-3 " style="background: #22273B; 
+        <div class="row p-3 m-0" style="background: #22273B; 
             color: #fff; height: auto; 
             
             border-radius: 0px 0px 0px 0px ;">
 
-            <div class="row">
-                <img style="position:absolute;width: 100%; height: 100%; object-fit: cover; opacity: 0.05; "
+            <div class="row m-0 p-0">
+                <img class="m-0 p-0 oculto_celular" style="position:absolute;width: 100%; height: 100%; object-fit: cover; opacity: 0.05; "
                     src="img/mmmotif.svg">
-                <div class="col-lg-3 block col-sm-12 d-flex justify-content-center align-items-center">
+                <div class="col-lg-3 block p-0 m-0 col-sm-12 m-0 d-flex justify-content-center align-items-center">
                     <img style="width: 300px; height: 400px; border-radius: 0%; border: 10px solid #fff;" class="magil"
                         src="img/zyro-image (1).png">
 
                 </div>
-                <div class="col-lg-9 col-sm-12 p-lg-5 mss" style="font-style:italic; margin-top: -30px;">
-                    <label class="" style="font-size: 70px; font-weight: bold; line-height: 75px;">Reseña histórica
+                <div class="col-lg-9 col-sm-12 p-lg-5 p-0 mss" style="font-style:italic; margin-top: -30px;">
+                    <label class="mt-5" style="font-size: 70px; font-weight: bold; line-height: 75px;">Reseña histórica
                         de la institución
                     </label>
                     La Unidad Educativa San Juan Evangelista se ha caracterizado por ser una institución educativa de
