--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
                 <div class="row no-gutters">
                     <div class="col-md-4">
                         <img style="width: 100%; height: 250px; object-fit: cover;"
-                            src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.shutterstock.com%2Fes%2Fsearch%2Filluminati-sign-eye-of-god&psig=AOvVaw3TV-hRB3Es9i02HkSnESHu&ust=1702090877971000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCOCKruTs_oIDFQAAAAAdAAAAABAD" alt="...">
+                            src="https://th.bing.com/th/id/OIG.mazgWsOjokq.ISVmPxZb?pid=ImgGn" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -583,7 +583,7 @@
                 <div class="row no-gutters">
                     <div class="col-md-4">
                         <img style="width: 100%; height: 250px; object-fit: cover;"
-                            src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.es%2Fvector-premium%2Fsimbolos-eucaristicos-pan-vino-caliz-hostia-espigas-vid-uvas_74573349.htm&psig=AOvVaw32jWp6YWmXfkqGYQTq7Hqz&ust=1702090959767000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCODemovt_oIDFQAAAAAdAAAAABAD" alt="...">
+                            src="https://th.bing.com/th/id/OIG.AztmpUrfQ7oZw6TNx2tc?w=1024&h=1024&rs=1&pid=ImgDetMain" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -625,7 +625,7 @@
                 <div class="row no-gutters">
                     <div class="col-md-4">
                         <img style="width: 100%; height: 250px; object-fit: cover;"
-                            src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.pinterest.com%2Fpin%2F329677635202100241%2F&psig=AOvVaw3B8nuTjESMeLMpMYFzHgCa&ust=1702091001375000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCJD7_J3t_oIDFQAAAAAdAAAAABAD" alt="...">
+                            src="https://th.bing.com/th/id/OIG.Yg_tEDcxeQgkCWkarbIT?w=1024&h=1024&rs=1&pid=ImgDetMain" alt="...">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
