--- a/componentes/menu.html
+++ b/componentes/menu.html
@@ -36,8 +36,18 @@ class=" container navbar navbar-expand-lg ">
             <a style="color: #202538 !important;" class="nav-link" href="bienestar_institucional.html">Bienestar
                 institucional</a>
         </li>
-
-
+        <li class="nav-item ml-2">
+            <a style="color: #202538 !important;" class="nav-link" href="noticias.html"> 
+                <i class="bi bi-card-heading "></i> Noticias UEFSJE
+                </a>
+        </li>
+     
     </ul>
+    <div class=" ml-5">
+        <a style="color: #ffffff !important;  background: #202538; border-radius: 25px;" class="nav-link" href="bienestar_institucional.html">
+            <i class="bi bi-cursor-fill"></i>Gestión académico 
+            
+            </a>
+    </div>
 </div>
 </nav>
