--- a/noticias.html
+++ b/noticias.html
@@ -20,12 +20,15 @@
 </style>
 
 <body >
-
+<!--
+     <div id="menu-container"></div>
+     Este es una comentario de prueba, con este puedo realizar comentario o bloquear codigo
+-->
     <div id="menu-container"></div>
 
     <div class="container">
         <div class="row text-center">
-            <h3 >NOTICIAS UEFSJE  </h3>
+            <h3>NOTICIAS UEFSJE  </h3>
             <div class="col-lg-12 p-4 row d-flex justify-content-center sombra">
                
                 <img style="width: 500px;" src="img/Noticias/noticia001.jpg">
